# RL

./: .env.example  .gitignore  README.md  RLplan.md  RLspec.md  changelog.md  pyproject.toml
docs/: action_mapping.md  benchmark_matrix.md  bridge_contract.md  default_backend_selection.md  eval_and_replay.md  flat_observation_ingestion.md  hotpath_map.md  logging_overhead_report.md  mvp_acceptance.md  observation_action_cost_report.md  observation_mapping.md  parity_canaries.md  parity_safe_optimization_rules.md  performance_decomposition_report.md  performance_plan.md  phase1_decision_gate.md  phase2_blocker_diagnosis.md  phase2_transport_gate.md  production_fast_trainer_benchmark.md  production_trainer_prototype_scope.md  python_profiler_report.md  reward_configs.md  rl_integration_contract.md  run_manifest.md  runtime_topology.md  transport_and_copy_ledger.md  wandb_logging_contract.md
fight_caves_rl/: __init__.py  defaults.py  headed_backend_control.py
history/: workspace_refactor_audit.md
scripts/: benchmark_bridge.py  benchmark_env.py  benchmark_subprocess_transport.py  benchmark_train.py  benchmark_train_ceiling.py  bootstrap_wsl_toolchain.sh  collect_batch_trace.py  collect_mechanics_parity_trace.py  collect_reset_repro.py  collect_seedpack_eval.py  collect_step_trace.py  collect_trajectory_trace.py  eval.py  refresh_phase0_packet.py  refresh_phase1_packet.py  refresh_phase2_packet.py  refresh_phase2_prototype_packet.py  replay_eval.py  run_acceptance_gate.py  run_demo_backend.py  run_headed_backend_smoke.py  run_headed_checkpoint_inference.py  train.py  (+5 more)
(+189 files in other folders)
